# agentic-ide-back

./: .gitignore  pyproject.toml
.claude/: settings.local.json
.claude/commands/: end-session.md
alembic/: env.py
alembic/versions/: 0609cd851d20_add_flows_table.py  07f9bf80fea1_add_hashed_password_to_users.py  0cd358f7475f_create_users_table.py  49e52d8063ab_add_username_to_backoffice_users.py  76ab156db31b_initial_postgres_migration.py  7be935b4a6b0_add_agentic_components_table.py  81a608452900_create_projects_table.py  89c4a0afdd85_add_consistent_characters_table.py  94bcb7d3d512_add_backoffice_users_table.py  e55a85b264ee_add_component_fields_component_ports_.py
app/: main.py
app/api/v1/: router.py
app/core/: auth.py  security.py
app/core/bus/: __init__.py  event_bus.py
app/core/db/: __init__.py  base.py  dependency.py
app/core/di/: __init__.py  discovery.py  registry.py
app/core/events/: __init__.py  base.py  subscribe.py  types.py
app/core/logger/: __init__.py  setup.py
app/core/ws/: __init__.py  manager.py  models.py
app/models/: __init__.py  agentic_component.py  backoffice_user.py  component_api_config.py  component_field.py  component_output_schema.py  component_port.py  consistent_character.py  event_log.py  flow.py  project.py  user.py
app/modules/execution/: handlers.py  manager.py  models.py  runner.py
app/modules/flux-generator/: flux_generator.py
app/modules/projects/: dependency.py  (+2 more)
docs/: QUICKSTART.md  session-summary.md
scripts/: seed_components.py
tests/fireworks-sdk/: model_list.py
tests/glm/: test_vision.py
(+42 files in other folders)
