[project]
name = "agentic-ide-back"
version = "0.1.0"
description = ""
authors = [
    {name = "MothTheWizerd",email = "motielmakyes@gmail.com"}
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "google-adk (>=1.25.0,<2.0.0)",
    "fastapi (>=0.115.0,<1.0.0)",
    "uvicorn[standard] (>=0.34.0,<1.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "zai-sdk (>=0.2.2,<0.3.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "openai (>=1.0.0,<2.0.0)",
    "anthropic (>=0.40.0,<1.0.0)",
    "fireworks-ai (>=0.19.20,<0.20.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
